--- a/index.html
+++ b/index.html
@@ -32,6 +32,85 @@
     </header>
     <!-- header end -->
 
+    <!-- main start -->
+    <main>
+        <!-- players section start -->
+        <section class="players-section container">
+            <div class="">
+                <div class="players">
+                    <div class="player">
+                        <figure>
+                            <img src="images/players/player-1.png" alt="player image-1">
+                            <figcaption>Neymar Jr-1</figcaption>
+                            <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Brazil national team.</p>
+                        </figure>
+                    </div>
+                    <div class="player">
+                        <figure>
+                            <img src="images/players/player-2.png" alt="player image-2">
+                            <figcaption>Neymar Jr-1</figcaption>
+                            <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Brazil national team.</p>
+                        </figure>
+                    </div>
+                    <div class="player">
+                        <figure>
+                            <img src="images/players/player-3.png" alt="player image-3">
+                            <figcaption>Neymar Jr-1</figcaption>
+                            <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Brazil national team.</p>
+                        </figure>
+                    </div>
+                    <div class="player">
+                        <figure>
+                            <img src="images/players/player-4.png" alt="player image-4">
+                            <figcaption>Neymar Jr-1</figcaption>
+                            <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Brazil national team.</p>
+                        </figure>
+                    </div>
+                    <div class="player">
+                        <figure>
+                            <img src="images/players/player-5.png" alt="player image-5">
+                            <figcaption>Neymar Jr-1</figcaption>
+                            <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Brazil national team.</p>
+                        </figure>
+                    </div>
+                    <div class="player">
+                        <figure>
+                            <img src="images/players/player-6.png" alt="player image-6">
+                            <figcaption>Neymar Jr-1</figcaption>
+                            <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Brazil national team.</p>
+                        </figure>
+                    </div>
+                    <div class="player">
+                        <figure>
+                            <img src="images/players/player-7.png" alt="player image-7">
+                            <figcaption>Neymar Jr-1</figcaption>
+                            <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Brazil national team.</p>
+                        </figure>
+                    </div>
+                    <div class="player">
+                        <figure>
+                            <img src="images/players/player-8.png" alt="player image-8">
+                            <figcaption>Neymar Jr-1</figcaption>
+                            <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Brazil national team.</p>
+                        </figure>
+                    </div>
+                    <div class="player">
+                        <figure>
+                            <img src="images/players/player-9.png" alt="player image-9">
+                            <figcaption>Neymar Jr-1</figcaption>
+                            <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Brazil national team.</p>
+                        </figure>
+                    </div>
+                    
+
+                </div>
+
+            </div>
+
+        </section>
+
+    </main>
+
 </body>
 
 </html>
