bonus part added

--- a/index.html
+++ b/index.html
@@ -42,74 +42,93 @@
                         <figure>
                             <img src="images/players/player-1.png" alt="player image-1">
                             <figcaption>Neymar Jr-1</figcaption>
-                            <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Brazil national team.</p>
+                            <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer
+                                who plays as a forward for Brazil national team.</p>
                         </figure>
                     </div>
                     <div class="player">
                         <figure>
                             <img src="images/players/player-2.png" alt="player image-2">
                             <figcaption>Neymar Jr-1</figcaption>
-                            <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Brazil national team.</p>
+                            <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer
+                                who plays as a forward for Brazil national team.</p>
                         </figure>
                     </div>
                     <div class="player">
                         <figure>
                             <img src="images/players/player-3.png" alt="player image-3">
                             <figcaption>Neymar Jr-1</figcaption>
-                            <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Brazil national team.</p>
+                            <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer
+                                who plays as a forward for Brazil national team.</p>
                         </figure>
                     </div>
                     <div class="player">
                         <figure>
                             <img src="images/players/player-4.png" alt="player image-4">
                             <figcaption>Neymar Jr-1</figcaption>
-                            <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Brazil national team.</p>
+                            <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer
+                                who plays as a forward for Brazil national team.</p>
                         </figure>
                     </div>
                     <div class="player">
                         <figure>
                             <img src="images/players/player-5.png" alt="player image-5">
                             <figcaption>Neymar Jr-1</figcaption>
-                            <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Brazil national team.</p>
+                            <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer
+                                who plays as a forward for Brazil national team.</p>
                         </figure>
                     </div>
                     <div class="player">
                         <figure>
                             <img src="images/players/player-6.png" alt="player image-6">
                             <figcaption>Neymar Jr-1</figcaption>
-                            <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Brazil national team.</p>
+                            <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer
+                                who plays as a forward for Brazil national team.</p>
                         </figure>
                     </div>
                     <div class="player">
                         <figure>
                             <img src="images/players/player-7.png" alt="player image-7">
                             <figcaption>Neymar Jr-1</figcaption>
-                            <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Brazil national team.</p>
+                            <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer
+                                who plays as a forward for Brazil national team.</p>
                         </figure>
                     </div>
                     <div class="player">
                         <figure>
                             <img src="images/players/player-8.png" alt="player image-8">
                             <figcaption>Neymar Jr-1</figcaption>
-                            <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Brazil national team.</p>
+                            <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer
+                                who plays as a forward for Brazil national team.</p>
                         </figure>
                     </div>
                     <div class="player">
                         <figure>
                             <img src="images/players/player-9.png" alt="player image-9">
                             <figcaption>Neymar Jr-1</figcaption>
-                            <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Brazil national team.</p>
+                            <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer
+                                who plays as a forward for Brazil national team.</p>
                         </figure>
                     </div>
-                    
-
                 </div>
-
             </div>
-
         </section>
+        <!-- players section end -->
 
+        <section class="newsletter-section container">
+            <div class="newsletter">
+                <form action="#">
+                    <h2 class="form-title">
+                        Subscribe Our Newsletter <i class="fas fa-paper-plane"></i>
+                    </h2>
+                    <input type="text" placeholder="Full Name" required>
+                    <input type="email" placeholder="E-mail" required>
+                    <button type="submit" class="btn btn-submit">Submit</button>
+                </form>
+            </div>
+        </section>
     </main>
+    <!-- main end -->
 
 </body>
 
