--- a/index.html
+++ b/index.html
@@ -130,6 +130,29 @@
     </main>
     <!-- main end -->
 
+    <!-- footer start -->
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+                <img src="images/Logo.png" alt="footer image">
+                <ul class="social-nav">
+                    <li>
+                        <a href=""><i class="fab fa-instagram"></i></a>
+                    </li>
+                    <li>
+                        <a href=""><i class="fab fa-dribbble"></i></a>
+                    </li>
+                    <li>
+                        <a href=""><i class="fab fa-twitter"></i></a>
+                    </li>
+                    <li>
+                        <a href=""><i class="fab fa-youtube"></i></a>
+                    </li>
+                </ul>
+                <p>Copyright &copy; 2020 Football</p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
